--- a/src/Components/Registration/signup.css
+++ b/src/Components/Registration/signup.css
@@ -1,19 +1,66 @@
+
 .signup-form{
-    border: 1px solid white;
-    background-color: #012f52;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 1%;
-    box-shadow: 1px 2px 2px 2px black;
-    width: 500px;
-    height: 650px;
-    gap: 5px;
+  border: 1px solid white;
+  background-color: #012f52;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1%;
+  box-shadow: 1px 2px 2px 2px black;
+  
+  gap: 5px;
+}
+
+
+@media (min-width: 993px) {
+
+  .signup-form{
+      width: 500px;
+      height: 650px;
+    }
+    
+  
+    .signup-input{
+      width: 300px;
+      height: 30px;
+    }
 
   }
   
-
-  .signup-input{
-    width: 300px;
-    height: 30px;
+  @media (min-width: 320px) and (max-width: 576px){
+  .signup-section{
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
+
+  .signup-form{
+    width: 100%;
+    height: 850px;
+  }
+
+}
+
+
+@media (min-width: 577px) and (max-width: 768px){
+  .signup-section{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .signup-form{
+    width: 100%;
+    height: 850px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px){
+  .signup-section{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .signup-form{
+    width: 500px;
+    height: 850px;
+  }
+}
