--- a/src/Components/Registration/Login.css
+++ b/src/Components/Registration/Login.css
@@ -3,7 +3,7 @@
     border: 1px solid white;
     background-color: #012f52;
     border-radius: 8px;
-    height: 450px;
+    height: 100%;
     box-shadow: 1px 2px 2px 2px #000;
   }
   
