--- a/src/Components/Registration/signup.css
+++ b/src/Components/Registration/signup.css
@@ -16,7 +16,7 @@
 
   .signup-form{
       width: 500px;
-      height: 650px;
+      height: 100%
     }
     
   
@@ -35,7 +35,7 @@
 
   .signup-form{
     width: 100%;
-    height: 850px;
+    height: 100%
   }
 
 }
@@ -49,7 +49,7 @@
 
   .signup-form{
     width: 100%;
-    height: 850px;
+    height: 100%
   }
 }
 
@@ -61,6 +61,6 @@
 
   .signup-form{
     width: 500px;
-    height: 850px;
+    height: 100%
   }
 }
