--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -35,6 +35,7 @@
   height: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  line-height: 28px;
 }
 
 .pagination-link:hover {
@@ -102,6 +103,7 @@
   .popular_product_image{
     width: 100%;
     height: 187px;
+    display: block;
   }
   .border_images{
     height: 350px;
@@ -169,12 +171,19 @@
 
 
 .popular_products_border{
-  border: white 1px solid;
-  height: 250px;
+  box-shadow: 1px 2px 4px rgb(39, 37, 37);
+  border-radius: 5px;
+  overflow: hidden;
+  height: 280px;
   width: 350px;
-  background: linear-gradient(to right, #053698, #052c49);
+  background: linear-gradient(to right, #4371ce, #1d3c53);
 }
 
+
+.popular_products_border:hover{
+  box-shadow: 3px 5px 5px rgb(39, 37, 37);
+  cursor: pointer;
+}
 
 .popular_product_price_button_container{
   display: flex;
@@ -194,7 +203,13 @@
 }
 
 .popular_product_price_container{
-  margin-left: 5px;
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+ align-items: flex-start;
+ margin-left: 20px;
+
+ gap: 3px;
 }
 
 }
