--- a/src/Components/Comics/Comic.css
+++ b/src/Components/Comics/Comic.css
@@ -66,17 +66,19 @@
   .product {
     height: 348px;
     width: 350px;
-    border: 1px solid silver;
+    overflow: hidden;
     border-radius: 2%;
     margin-left: 50px;
-    background: linear-gradient(to right, #053698, #052c49);
-    box-shadow: 0px 1px 2px rgb(228, 224, 224)
+    background: linear-gradient(to right, #4371ce, #1d3c53);
+    box-shadow: 1px 2px 4px rgb(39, 37, 37);
+    
 }
 
 
 
 
 .product-image {
+  display: block;
   height: 180px;
   width: 349px;
   border-radius: 2% 2% 0 0; /* top-left, top-right, bottom-right, bottom-left */
@@ -107,26 +109,7 @@
     color: white;
   }
 
-  .loading-container {
-    position: relative;
-    width: 24px;
-    height: 24px;
-  }
-  
-  .loading {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    border: 2px solid #ccc; /* Adjust the border color and width as needed */
-    border-top: 2px solid #4371ce; /* Adjust the color to match your design */
-    border-radius: 50%;
-    animation: spin 1s linear infinite; /* Create a spinning animation */
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+
   
 
 }
