--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -9,6 +9,25 @@
   border-radius: 3px;
 }
 
+.popular_product_price_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 20px;
+ 
+  gap: 3px;
+ }
+
+ .popular_products_border{
+  box-shadow: 1px 2px 4px rgb(39, 37, 37);
+  border-radius: 5px;
+  overflow: hidden;
+  height: 280px;
+  width: 350px;
+  background: linear-gradient(to right, #4371ce, #1d3c53);
+}
+
    .page-count {
   display: flex;
   justify-content: center;
@@ -90,7 +109,8 @@
 .border_product_desc{
   line-height: 25px;
   text-align: left;
-  margin-left: 5px;
+  margin-left: 12px;
+
 
 }
 
@@ -106,17 +126,22 @@
     display: block;
   }
   .border_images{
-    height: 350px;
+    width: 500px;
+    height: 400px;
+    display: block;
   }
+
   .border-product-container{
 
    margin-left: auto;
    margin-right: auto;
-   height: 350px;
-   width: 850px;
-   border: silver 2px solid;
+   height: 400px;
+   width: 1000px;
+  border-radius: 5px;
+  overflow: none;
    margin-top: 10px;
-   background-color: #012f52;
+   background: linear-gradient(to right, #4371ce, #1d3c53);
+   box-shadow: 1px 3px 3px rgb(39, 37, 37);
   }
 
 
@@ -170,14 +195,7 @@
 }
 
 
-.popular_products_border{
-  box-shadow: 1px 2px 4px rgb(39, 37, 37);
-  border-radius: 5px;
-  overflow: hidden;
-  height: 280px;
-  width: 350px;
-  background: linear-gradient(to right, #4371ce, #1d3c53);
-}
+
 
 
 .popular_products_border:hover{
@@ -240,6 +258,7 @@
 }
 
 
+
 .popular_products_container{
   display: flex;
   flex-direction: column;
@@ -251,12 +270,7 @@
 
 
 
-.popular_products_border{
-  border: white 1px solid;
-  height: 250px;
-  width: 300px;
-  background: linear-gradient(to right, #053698, #052c49);
-}
+
 
 .popular_products_section{
   text-align: center;
@@ -317,12 +331,6 @@
 
 
 
-.popular_products_border{
-  border: white 1px solid;
-  height: 250px;
-  width: 300px;
-  background: linear-gradient(to right, #053698, #052c49);
-}
 
 .popular_products_section{
   text-align: center;
@@ -384,12 +392,7 @@
 
 
 
-.popular_products_border{
-  border: white 1px solid;
-  height: 250px;
-  width: 300px;
-  background: linear-gradient(to right, #053698, #052c49);
-}
+
 
 .popular_products_section{
   text-align: center;
