--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -72,51 +72,46 @@ nav{
   }
 
 
-  .searchInputs{
-    text-align:  center;
+  .searchInputs {
     display: flex;
-  }
+    align-items: center;
+    background-color: white;
 
-  .search .searchbar{
-    border: 0px;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 18px;
-    padding: 15px;
-    height: 8px;
-    width: 400px;
-    background-color:  white;
-    color: black;
-    border: black 1px solid;
-    margin-top: 5px;
-    border-radius: 4px;
+    border-radius: 40px;
+    width: 300px;
+    margin-top: 10px;
+    padding: 5px;
   }
   
-
-
-
-  .searchIcon{
-    background-color: white;
-    height: 38px;
-   margin-top: 5px;
-    display: grid;
-    place-items: center;
-    border-left: black 1px solid;
-    border: black solid 1px;
-    border-radius: 4px;
+  .searchbar {
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+    flex: 1;
+    margin-left: 10px;
+    height: 30px;
+    outline: none;
   }
+  
+  .searchIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+  }
+  
 
 
   .dataResult{
     margin-top: 5px;
     width: 300px;
     height: 200px;
-    border: white 1px solid;
-    background-color: rgb(83, 80, 80);
+
+    background-color: rgb(55, 48, 48);
     overflow: hidden;
     overflow-y: auto;
     position: absolute;
+    border-radius: 10px;
   }
 
   .search-link:hover{
@@ -161,6 +156,7 @@ nav{
    align-items: center;
    justify-content: center;
   }
+
 
 
 /* CSS for the search bar */
@@ -209,7 +205,8 @@ nav{
 }
   
   nav{
-      border-bottom: silver solid 2px;
+    
+      margin-top: -30px;
     }
   
     .nav-category{
@@ -304,10 +301,11 @@ nav{
   left: 0;
 }
   
-  nav{
-      border-bottom: silver solid 2px;
-    }
-  
+nav{
+    
+  margin-top: -30px;
+}
+
     .nav-category{
   
       display: flex;
@@ -397,9 +395,11 @@ nav{
   left: 0;
 }
   
-  nav{
-      border-bottom: silver solid 2px;
-    }
+nav{
+    
+  margin-top: -30px;
+}
+
   
     .nav-category{
       margin-top: 25px;
