--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -236,16 +236,19 @@
 @media (min-width: 320px) and (max-width: 576px) {
 
   .border-product-container{
-
-    margin-left: auto;
-    margin-right: auto;
-    border: silver 2px solid;
+    box-shadow: 1px 3px 3px rgb(39, 37, 37);
+    border-radius: 5px;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-top: 10px;
-    background-color: #012f52;
+    background: linear-gradient(to right, #4371ce, #1d3c53);
+    height: 700px;
    }
 
 .border_images{
-  width: 200px;
+  width: 100%;
+  display: block;
 }
 
 
@@ -257,7 +260,77 @@
   margin-bottom: 10px;
 }
 
+.feature-header{
+  text-align: center;
+}
 
+.popular_products_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+
+
+
+
+
+.popular_products_section{
+  text-align: center;
+}
+
+.popular_product_price_button_container{
+  display: flex;
+  align-items: center;
+ 
+}
+
+.popular_button_container {
+  margin-left: auto;
+  margin-right: 5px;
+}
+
+.popular_product_image{
+  width: 100%;
+  height: 187px;
+}
+
+
+}
+
+
+@media (min-width: 320px) and (max-width: 576px) {
+
+  .border-product-container{
+    box-shadow: 1px 3px 3px rgb(39, 37, 37);
+    border-radius: 5px;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    background: linear-gradient(to right, #4371ce, #1d3c53);
+    height: 700px;
+   }
+
+.border_images{
+  width: 100%;
+  display: block;
+}
+
+
+.border_images_container{
+  text-align: center;
+}
+
+.border_button{
+  margin-bottom: 10px;
+}
+
+.feature-header{
+  text-align: center;
+}
 
 .popular_products_container{
   display: flex;
