--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -141,7 +141,7 @@ nav{
 
 
 
-@media (min-width: 320px) and (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 768px) {
 
   a{
     text-decoration: none;
@@ -152,56 +152,47 @@ nav{
   }
     
   .searchInputs {
-    display: flex; /* Use flexbox */
-   align-items: center;
-   justify-content: center;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 40px;
+    width: 300px;
+    margin-top: 10px;
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
-
-
-
-/* CSS for the search bar */
-.search .searchbar {
-  border: 0px;
-  border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  font-size: 18px;
-  padding: 15px;
-  height: 30px;
-  width: 300px;
-  background-color: white;
-  color: black;
-  border: white 1px solid;
   
-}
-
-.searchIcon{
-  border: 1px white solid;
-  height: 30px;
-  background-color: white;
-  border-left: black 1px solid;
-}
+  .searchbar {
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+    flex: 1;
+    height: 30px;
+    outline: none;
+  }
+  
+  .searchIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+  }
 /* CSS for the search container */
-.search {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
+
 
 /* CSS for the dataResult dropdown menu */
-.dataResult {
+.dataResult{
+  margin-top: -15px;
   width: 300px;
-  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
-  border: white 1px solid;
-  background-color: black;
+  height: 200px;
+  background-color: rgb(55, 48, 48);
   overflow: hidden;
   overflow-y: auto;
   position: absolute;
-  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
-  left: 0;
+  border-radius: 10px;
 }
   
   nav{
@@ -233,103 +224,6 @@ nav{
  
 
 }
-
-
-
-
-@media (min-width: 577px) and (max-width: 768px){
-
-
- 
-  a{
-    text-decoration: none;
-    color: white
-  }
-  .dropdown-link{
-    color: white;
-  }
-    
-  .searchInputs {
-    display: flex; /* Use flexbox */
-   align-items: center;
-   justify-content: center;
-  }
-
-
-/* CSS for the search bar */
-.search .searchbar {
-  border: 0px;
-  border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  font-size: 18px;
-  padding: 15px;
-  height: 30px;
-  width: 300px;
-  background-color: white;
-  color: white;
-  border: white 1px solid;
-  
-}
-
-.searchIcon{
-  border: 1px white solid;
-  background-color: white;
-  border-left: solid black 1px;
-  height: 30px;
-}
-/* CSS for the search container */
-.search {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-/* CSS for the dataResult dropdown menu */
-.dataResult {
-  width: 300px;
-  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
-  border: white 1px solid;
-  background-color: black;
-  overflow: hidden;
-  overflow-y: auto;
-  position: absolute;
-  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
-  left: 0;
-}
-  
-nav{
-    
-  margin-top: -30px;
-}
-
-    .nav-category{
-  
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      gap: 20px;
-  
-    }
-  
-  .searchIcon{
-    display: inline
-  }
-
-  .nav-3{
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
-   gap: 20px;
-
-  }
-
- 
-}
-
 
 
 
@@ -395,10 +289,7 @@ nav{
   left: 0;
 }
   
-nav{
-    
-  margin-top: -30px;
-}
+
 
   
     .nav-category{
@@ -443,7 +334,7 @@ nav{
  }
 
  nav{
-    border-bottom: silver solid 2px;
+
     background: linear-gradient(to right, #053698, #052c49);
   }
 
