--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -180,12 +180,17 @@ nav{
     justify-content: center;
     margin-right: 10px;
   }
-/* CSS for the search container */
 
 
-/* CSS for the dataResult dropdown menu */
+.dataResult_container{
+  display: flex;
+  justify-content: center;
+}
 .dataResult{
   margin-top: -15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 300px;
   height: 200px;
   background-color: rgb(55, 48, 48);
@@ -195,6 +200,7 @@ nav{
   border-radius: 10px;
 }
   
+
   nav{
     
       margin-top: -30px;
@@ -238,34 +244,32 @@ nav{
   }
     
   .searchInputs {
-    display: flex; /* Use flexbox */
-   align-items: center;
-   justify-content: center;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    height: 30px;
+    border-radius: 40px;
+    width: 250px;
+    margin-top: 10px;
+    padding: 5px;
   }
-
-
-/* CSS for the search bar */
-.search .searchbar {
-  border: 0px;
-  border-radius: 2px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  font-size: 18px;
-  padding: 15px;
-  height: 30px;
-  width: 200px;
-  background-color: white;
-  color: white;
-  border: white 1px solid;
   
-}
-
-.searchIcon{
-  border: 1px white solid;
-  background-color: white;
-  border-left: black solid 1px;
-  height: 30px;
-}
+  .searchbar {
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+    flex: 1;
+    margin-left: 10px;
+    height: 30px;
+    outline: none;
+  }
+  
+  .searchIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+  }
 /* CSS for the search container */
 .search {
   display: flex;
@@ -277,16 +281,16 @@ nav{
 }
 
 /* CSS for the dataResult dropdown menu */
-.dataResult {
+.dataResult{
+  margin-top: 5px;
   width: 300px;
-  max-height: 200px; /* Use max-height instead of height to limit the size of the dataResult div */
-  border: white 1px solid;
-  background-color: black;
+  height: 200px;
+
+  background-color: rgb(55, 48, 48);
   overflow: hidden;
   overflow-y: auto;
   position: absolute;
-  top: calc(100% + 5px); /* Position .dataResult below the .searchbar with a small gap */
-  left: 0;
+  border-radius: 10px;
 }
   
 
