Login and Signup form background color changed and removed the white border

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -100,7 +100,7 @@
 
 }
 
-@media (min-width: 320px) and (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 768px) {
 
   .cart-header {
     text-align: center;
@@ -124,7 +124,7 @@
 
   .product-card-section {
     box-sizing: border-box;
-    border: 1px solid white;
+    background: linear-gradient(to right, #323740, #1a3951);
     box-shadow: 2px 2px 4px #000000;
     border-radius: 5px;
     margin: 0 20px;
@@ -185,91 +185,6 @@
 }
 
 
-@media (min-width: 577px) and (max-width: 768px){
-
-
-  .cart-header {
-    text-align: center;
-  }
-
-  .shopping-cart {
-    text-align: center;
-  }
-
-  .cart-images {
-    width: 125px;
-    height: 150px;
-  }
-
-  .products-cart {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-  }
-
-  .product-card-section {
-    box-sizing: border-box;
-    border: 1px solid white;
-    box-shadow: 2px 2px 4px #000000;
-    border-radius: 5px;
-    margin: 0 20px;
-    padding: 10px;
-    width: 300px;
-  }
-
-  .count-number {
-    width: 70px;
-    text-align: center;
-  }
-
-  .clear-cart {
-    border: none;
-    background-color: transparent
-  }
-
-  .product-quantity-price {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-column-gap: 10px;
-    align-items: center;
-  }
-
-  .products_summary {
-    display: grid;
-    grid-row-gap: 20px;
-  }
-
-  .cart-btns {
-    border: none;
-    background-color: rgb(48, 166, 216);
-    color: white;
-    height: 50px;
-    width: 200px;
-  }
-
-  .cart-container {
-    text-align: center;
-  }
-
-  .order-details {
-    margin: 0 20px;
-  }
-
-  .product-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card-info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-
-}
 
 
 @media (min-width: 769px) and (max-width: 992px){
@@ -296,7 +211,7 @@
 
   .product-card-section {
     box-sizing: border-box;
-    border: 1px solid white;
+    background: linear-gradient(to right, #323740, #1a3951);
     box-shadow: 2px 2px 4px #000000;
     border-radius: 5px;
     margin: 0 20px;
