--- a/src/Components/Registration/Login.css
+++ b/src/Components/Registration/Login.css
@@ -1,12 +1,16 @@
 
 .login-form{
-    border: 1px solid white;
-    background-color: #012f52;
+
+  background: linear-gradient(to right, #323740, #1a3951);
     border-radius: 8px;
     height: 100%;
     box-shadow: 1px 2px 2px 2px #000;
   }
   
+
+.registory-btn{
+  margin-bottom: 10px;
+}
   @media (min-width: 993px) {
     
     .login-form{
@@ -40,7 +44,7 @@
 }
 
 
-@media (min-width: 320px) and (max-width: 576px){
+@media (min-width: 320px) and (max-width: 768px){
 
   .login-form{
     display: flex;
@@ -48,7 +52,7 @@
     height: 500px;
     flex-direction: column;
     align-items: center;
-
+    margin-bottom: 20px;
     margin-top: 30px;
     gap: 20px;
   }
@@ -71,35 +75,6 @@
 
 
 
-@media (min-width: 577px) and (max-width: 768px){
-
-  .login-form{
-    display: flex;
-    width: 400px;
-    height: 500px;
-    flex-direction: column;
-    align-items: center;
-
-    margin-top: 30px;
-    gap: 20px;
-  }
-  .label-signup{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    text-align: left;
-    font-weight: bold;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-
-  .login-form-container{
-    display: flex;
-    justify-content: center;
-  }
-
-
-}
 
 
 @media (min-width: 769px) and (max-width: 992px){
