--- a/src/Components/Registration/signup.css
+++ b/src/Components/Registration/signup.css
@@ -1,7 +1,7 @@
 
 .signup-form{
-  border: 1px solid white;
-  background-color: #012f52;
+
+  background: linear-gradient(to right, #323740, #1a3951);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,6 +9,10 @@
   box-shadow: 1px 2px 2px 2px black;
   
   gap: 5px;
+}
+
+.sign-btn{
+  margin-bottom: 10px;
 }
 
 
